src/test/resources/failing/fail58.pnd
@type Animal
@type Shape

foo(x) <- Shape(x)
foo(x) <- Animal(x)